--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -7,7 +7,7 @@
 
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <form name="form" role="form" (ngSubmit)="register()" [formGroup]="registerForm" *ngIf="!success">
+      <form name="form" role="form" (ngSubmit)="register()" [formGroup]="registerForm">
         <div class="form-group">
           <input type="email" class="form-control" id="email" name="email" placeholder="Email" formControlName="email" data-cy="email" />
         </div>
