--- a/src/main/webapp/app/account/register/style.scss
+++ b/src/main/webapp/app/account/register/style.scss
@@ -27,3 +27,41 @@ textarea {
   border-radius: 0.75rem !important;
   font-family: sans-serif;
 }
+
+.avatar-list {
+  display: flex !important;
+}
+
+.btn-upload {
+  color: white;
+  width: 20px;
+  height: 20px;
+  background-color: #e5eaef;
+}
+
+.uploadImage {
+  border: #e5eaef 1px dashed;
+  width: 50px;
+  height: 50px;
+  border-radius: 0.75rem !important;
+  margin: 5px;
+  position: relative;
+  overflow: hidden;
+}
+
+.avatar-preview {
+  width: 50px;
+  height: 50px;
+  border-radius: 0.75rem !important;
+  margin: 5px;
+  position: relative;
+  overflow: hidden;
+}
+
+.avatar-preview > div {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
